fix(android): support API 23 URL encoding